--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ d'acquérir.
     <h3>10/2023 - 07/2026
       - Chef de projet digital</h3>
     <p>
-      dans les prochain mois je vais avoir l'occasion d'aborder quatre spécialité.
+      dans les prochain mois je vais avoir l'occasion d'aborder quatre spécialité
     </p>
     <p>
       - Web marketing    </p>
