--- a/index.html
+++ b/index.html
@@ -11,63 +11,88 @@
 <link rel="manifest" href="/site.webmanifest">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-  </head>
+
+<link rel="stylesheet" href="css/styles.css">
+
+<head>
+
   <!-- Pour l'utilisateur -->
   <body>
-    <h1>Hugo FRESI</h1>
-    <p>
-      <HR>
-        Etudiant désireux d'intégrer votre entreprise pour un CDI Développeur d'applications F/H, je suis prêt à relever de
-        nouveaux défis et à apporter une valeur ajoutée à votre entreprise.
-    </p>
-    <p>
-      En ayant l'opportunité de me joindre a vous afin de pouvoir mettre en place les compétences que je suis entrain
-d'acquérir.
-    </p>
+
+    <img src="./photode moi nws.jpg"> 
+
+      <h1> Hugo FRESI</h1>
+        <h3> Etudiant désireux d'intégrer votre entreprise pour un CDI Développeur d'applications F/H, je suis prêt à relever de
+        nouveaux défis et à apporter une valeur ajoutée à votre entreprise. </h3>
+        <h4> En ayant l'opportunité de me joindre a vous afin de pouvoir mettre en place les compétences que je suis entrain
+d'acquérir.</h4>
+
     <HR>
-    <h2>Diplomes et formations</h2>
-    <h3>10/2023 - 07/2026
-      - Chef de projet digital</h3>
-    <p>
-      dans les prochain mois je vais avoir l'occasion d'aborder quatre spécialité
-    </p>
-    <p>
-      - Web marketing    </p>
-<p>- Communication graphique</p>
-<p>- Community Management</p>
-<p>- Développement web</p>
-    <h3>2021 - 2023 - BTS Conception et Réalisation de Systèmes Automatiques</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, nobis.
-    </p>
-    <h3>2022 - Concours national " Je filme ma formation" - Prix d'argent</h3>
-    <p>
-      je me suis charger de toute la partie audio visuelle ainsi que de la coordination de mes camarades
-    </p>
-    <h3>2021 - Baccalauréat technologique STI2D - Mention assez bien</h3>
-    <p>
-      Spécialités : Architecture et construction
-    </p>
-    <h3>2019 Brevet d'Initiation Aéronautique (BIA) - Mention assez bien</h3>
-    <h3>2018 Certificat de compétences de citoyen de sécurité civile - PSC1</h3>
-  
-    <h2>Expérience</h2>
+      <p><a href="site de l'etablissement">https://normandiewebschool.fr/</a></p>
+      <p><a href="mon Linkedin">https://www.linkedin.com/in/hugo-fresi-ba4aba27b</a></p>
+      <p><a href="mon GitHub">https://github.com/HugoFRESI/html</a></p>
+
+    <section>
+      <h2> Diplomes et formations</h2>
+      <ul>
+        <li>
+          <h3> 10/2023 - 07/2026 - Chef de projet digital</h3>
+            <p> Dans les prochain mois je vais avoir l'occasion d'aborder quatre spécialité
+            </p>
+            <ul>
+              <li> Web marketing</li>
+              <li>Communication graphique</li> 
+              <li>Community Managemen</li>
+              <li>Développement web</li>
+           </ul>
+        </li>
+        <li>
+          <h3>2021 - 2023 - BTS Conception et Réalisation de Systèmes Automatiques</h3>
+        </li>
+        <li>
+          <h3>2022 - Concours national " Je filme ma formation" - Prix d'argent</h3>
+            <p> je me suis charger de toute la partie audio visuelle ainsi que de la coordination de mes camarades
+           </p>
+        </li>
+        <li>
+          <h3>2021 - Baccalauréat technologique STI2D - Mention assez bien</h3>
+            <p> Spécialités : Architecture et construction
+            </p>
+        </li>
+        <li>
+          <h3>2019 Brevet d'Initiation Aéronautique (BIA) - Mention assez bien</h3>
+        </li>
+        <li>
+          <h3>2018 Certificat de compétences de citoyen de sécurité civile - PSC1</h3>
+        </li>
+      </ul>
+    </section>
+
+    <section>
+     <h2>Expérience</h2>
     <ul class="list">
       <li>
         <h3>2022 Stage de 6 semaines</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus,
-          cumque!
-        </p>
-        <P>Etablissement d'une liste de composants électriques</P>
-        <p>Programmation sur le logiciel EcoStruxure Machine Expert sous forme de grafcet</p>
-       <P>Schémas d'armoires électriques</P>
+          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, cumque!
+          </p>
+        <ul>
+          <li> Etablissement d'une liste de composants électriques </li>
+          <li> Programmation sur le logiciel EcoStruxure Machine Expert sous forme de grafcet </li>
+          <li> Schémas d'armoires électriques </li>
+        </ul>
       </li>
-      <h2>Compétences</h2>
-      <li><h3>CSS</h3></li>
-      <li><h3>HTML</h3></li>
-      <li><h3>PYTHON</h3></li>
-      <li><h3>JAVASCRIPT</h3></li>
     </ul>
+    </section>
+      
+    <section>
+      <h2>Compétences</h2>
+        <ul>
+          <li> <h3> CSS </h3> </li>
+          <li> <h3> HTML </h3> </li>
+          <li> <h3> PYTHON </h3> </li>
+          <li> <h3> JAVASCRIPT </h3> </li>
+        </ul>
+    </section>
+
   </body>
 </html>
