--- a/index.html
+++ b/index.html
@@ -18,20 +18,44 @@
 
   <!-- Pour l'utilisateur -->
   <body>
+    <div class="container">
+<div class="left_side"></div>
+<div class="right_side"></div>
+ </div>
 
     <img src="./photode moi nws.jpg"> 
-
+    
       <h1> Hugo FRESI</h1>
+      <HR>
         <h3> Etudiant désireux d'intégrer votre entreprise pour un CDI Développeur d'applications F/H, je suis prêt à relever de
         nouveaux défis et à apporter une valeur ajoutée à votre entreprise. </h3>
         <h4> En ayant l'opportunité de me joindre a vous afin de pouvoir mettre en place les compétences que je suis entrain
 d'acquérir.</h4>
 
     <HR>
+      <p>0783378197</p>
       <p><a href="site de l'etablissement">https://normandiewebschool.fr/</a></p>
       <p><a href="mon Linkedin">https://www.linkedin.com/in/hugo-fresi-ba4aba27b</a></p>
       <p><a href="mon GitHub">https://github.com/HugoFRESI/html</a></p>
+<UL>
+<h2>
+  Soft Skills
+</h2>
+<li>travailleur</li>
+<li>Organisé</li>
+<li>A l'écoute</li>
+<li>passionné</li>
+<li>Logique</li>
+<li>communicant</li>
+</UL>
 
+<ul>
+  <h2>Centres d'intérêt
+  </h2>
+  <li>Informatique</li>
+  <li>Musique</li>
+  <li>Trading</li>
+</ul>
     <section>
       <h2> Diplomes et formations</h2>
       <ul>
@@ -86,12 +110,40 @@ d'acquérir.</h4>
       
     <section>
       <h2>Compétences</h2>
-        <ul>
-          <li> <h3> CSS </h3> </li>
-          <li> <h3> HTML </h3> </li>
-          <li> <h3> PYTHON </h3> </li>
-          <li> <h3> JAVASCRIPT </h3> </li>
-        </ul>
+      <table>
+        <tr>
+           <th>Niveau /3</th>
+        </tr>
+        <tr>
+          <tr>
+            <td>Suite Adobe</td>
+            <td>⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Gestion de projet</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>Pack Microsoft Office</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>JAVASCRIPT</td>
+            <td>⭐</td>
+          </tr>
+          <tr>
+            <td>PYTHON</td>
+            <td>⭐⭐⭐</td>
+          </tr>
+          <tr>
+            <td>HTML</td>
+            <td>⭐</td>
+          </tr>
+        </table>
     </section>
 
   </body>
