--- a/index.html
+++ b/index.html
@@ -5,146 +5,183 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-
-<link rel="stylesheet" href="css/styles.css">
-
-<head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
   <!-- Pour l'utilisateur -->
   <body>
-    <div class="container">
-<div class="left_side"></div>
-<div class="right_side"></div>
- </div>
+    <div class="contrainer">
+      <class="left_side">
+        <div class="profiletext">
+        </div> 
+        <div class="imgbox"></div>
+          <img src="./photode moi nws.jpg" alt="" />
 
-    <img src="./photode moi nws.jpg"> 
-    
-      <h1> Hugo FRESI</h1>
-      <HR>
-        <h3> Etudiant désireux d'intégrer votre entreprise pour un CDI Développeur d'applications F/H, je suis prêt à relever de
-        nouveaux défis et à apporter une valeur ajoutée à votre entreprise. </h3>
-        <h4> En ayant l'opportunité de me joindre a vous afin de pouvoir mettre en place les compétences que je suis entrain
-d'acquérir.</h4>
-
-    <HR>
-      <p>0783378197</p>
-      <p><a href="site de l'etablissement">https://normandiewebschool.fr/</a></p>
-      <p><a href="mon Linkedin">https://www.linkedin.com/in/hugo-fresi-ba4aba27b</a></p>
-      <p><a href="mon GitHub">https://github.com/HugoFRESI/html</a></p>
-<UL>
-<h2>
-  Soft Skills
-</h2>
-<li>travailleur</li>
-<li>Organisé</li>
-<li>A l'écoute</li>
-<li>passionné</li>
-<li>Logique</li>
-<li>communicant</li>
-</UL>
-
-<ul>
-  <h2>Centres d'intérêt
-  </h2>
-  <li>Informatique</li>
-  <li>Musique</li>
-  <li>Trading</li>
-</ul>
-    <section>
-      <h2> Diplomes et formations</h2>
-      <ul>
-        <li>
-          <h3> 10/2023 - 07/2026 - Chef de projet digital</h3>
-            <p> Dans les prochain mois je vais avoir l'occasion d'aborder quatre spécialité
-            </p>
-            <ul>
-              <li> Web marketing</li>
-              <li>Communication graphique</li> 
-              <li>Community Managemen</li>
-              <li>Développement web</li>
-           </ul>
-        </li>
-        <li>
-          <h3>2021 - 2023 - BTS Conception et Réalisation de Systèmes Automatiques</h3>
-        </li>
-        <li>
-          <h3>2022 - Concours national " Je filme ma formation" - Prix d'argent</h3>
-            <p> je me suis charger de toute la partie audio visuelle ainsi que de la coordination de mes camarades
-           </p>
-        </li>
-        <li>
-          <h3>2021 - Baccalauréat technologique STI2D - Mention assez bien</h3>
-            <p> Spécialités : Architecture et construction
-            </p>
-        </li>
-        <li>
-          <h3>2019 Brevet d'Initiation Aéronautique (BIA) - Mention assez bien</h3>
-        </li>
-        <li>
-          <h3>2018 Certificat de compétences de citoyen de sécurité civile - PSC1</h3>
-        </li>
-      </ul>
-    </section>
-
-    <section>
-     <h2>Expérience</h2>
-    <ul class="list">
-      <li>
-        <h3>2022 Stage de 6 semaines</h3>
-          <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, cumque!
+        <h1>Hugo FRESI</h1>
+        <section>
+          <p>0783378197</p>
+          <p>
+            <a href="site de l'etablissement">https://normandiewebschool.fr/</a>
           </p>
-        <ul>
-          <li> Etablissement d'une liste de composants électriques </li>
-          <li> Programmation sur le logiciel EcoStruxure Machine Expert sous forme de grafcet </li>
-          <li> Schémas d'armoires électriques </li>
-        </ul>
-      </li>
-    </ul>
-    </section>
-      
-    <section>
-      <h2>Compétences</h2>
-      <table>
-        <tr>
-           <th>Niveau /3</th>
-        </tr>
-        <tr>
-          <tr>
-            <td>Suite Adobe</td>
-            <td>⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Gestion de projet</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>Pack Microsoft Office</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <td>JAVASCRIPT</td>
-            <td>⭐</td>
-          </tr>
-          <tr>
-            <td>PYTHON</td>
-            <td>⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>HTML</td>
-            <td>⭐</td>
-          </tr>
-        </table>
-    </section>
+          <p>
+            <a href="mon Linkedin"
+              >https://www.linkedin.com/in/hugo-fresi-ba4aba27b</a
+            >
+          </p>
+          <p><a href="mon GitHub">https://github.com/HugoFRESI/html</a></p>
+          <h2>Soft Skills</h2>
+          <ul>
+            <li>travailleur</li>
+            <li>Organisé</li>
+            <li>A l'écoute</li>
+            <li>passionné</li>
+            <li>Logique</li>
+            <li>communicant</li>
+          </ul>
+          <!--end of soft skills and me contacter-->
+        </section>
+        <section>
+          <h2>Centres d'intérêt</h2>
+          <ul>
+            <li>Informatique</li>
+            <li>Musique</li>
+            <li>Trading</li>
+          </ul>
+        </section>
+        <!--end of centre d'interet-->
+        <section>
+          <h2>Compétences</h2>
+          <table>
+            <tr>
+              <th>Niveau /3</th>
+              <th></th>
+            </tr>
+            <tr>
+              <td>Suite Adobe</td>
+              <td>⭐⭐</td>
+            </tr>
+            <tr>
+              <td>Gestion de projet</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>Pack Microsoft Office</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>CSS</td>
+              <td>⭐</td>
+            </tr>
+            <tr>
+              <td>JAVASCRIPT</td>
+              <td>⭐</td>
+            </tr>
+            <tr>
+              <td>PYTHON</td>
+              <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+              <td>HTML</td>
+              <td>⭐</td>
+            </tr>
+          </table>
+        </section>
+      </div>
+      <!-- end of left -->
 
+      <div class="right_side">
+        <hr />
+        <h3>
+          Etudiant désireux d'intégrer votre entreprise pour un CDI Développeur
+          d'applications F/H, je suis prêt à relever de nouveaux défis et à
+          apporter une valeur ajoutée à votre entreprise.
+        </h3>
+        <h4>
+          En ayant l'opportunité de me joindre à vous afin de pouvoir mettre en
+          place les compétences que je suis entrain d'acquérir.
+        </h4>
+        <hr />
+        <section class="experinces">
+          <h2>Expérience</h2>
+          <ul class="list">
+            <li>
+              <h3>2022 Stage de 6 semaines</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Repellendus, cumque!
+              </p>
+              <ul>
+                <li>Etablissement d'une liste de composants électriques</li>
+                <li>
+                  Programmation sur le logiciel EcoStruxure Machine Expert sous
+                  forme de grafcet
+                </li>
+                <li>Schémas d'armoires électriques</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
+        <!-- end of experience -->
+        <section>
+          <h2>Diplomes et formations</h2>
+          <ul>
+            <li>
+              <h3>10/2023 - 07/2026 - Chef de projet digital</h3>  
+              <p>
+                Dans les prochains mois je vais avoir l'occasion d'aborder quatre
+                spécialités
+              </p>
+              <ul>
+                <li>Web marketing</li>
+                <li>Communication graphique</li>
+                <li>Community Managemen</li>
+                <li>Développement web</li>
+              </ul>
+            </li>
+            <li>
+              <h3>
+                2021 - 2023 - BTS Conception et Réalisation de Systèmes
+                Automatiques
+              </h3>
+            </li>
+            <li>
+              <h3>
+                2022 - Concours national " Je filme ma formation" - Prix
+                d'argent
+              </h3>
+              <p>
+                je me suis chargé de toute la partie audio visuelle ainsi que
+                de la coordination de mes camarades
+              </p>
+            </li>
+            <li>
+              <h3>
+                2021 - Baccalauréat technologique STI2D - Mention assez bien
+              </h3>
+              <p>Spécialités : Architecture et construction</p>
+            </li>
+            <li>
+              <h3>
+                2019 Brevet d'Initiation Aéronautique (BIA) - Mention assez bien
+              </h3>
+            </li>
+            <li>
+              <h3>
+                2018 Certificat de compétences de citoyen de sécurité civile -
+                PSC1
+              </h3>
+            </li>
+          </ul>
+        </section>
+        <!--end of diplome et fomation -->
+      </div>
+      <!-- end of right -->
+    </div>
   </body>
 </html>
