--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Pour l'utilisateur -->
   <body>
     <div class="contrainer">
-      <class="left_side">
+      <div class="left_side">
         <div class="profiletext">
         </div> 
         <div class="imgbox"></div>
@@ -27,14 +27,14 @@
         <section>
           <p>0783378197</p>
           <p>
-            <a href="site de l'etablissement">https://normandiewebschool.fr/</a>
+            <a 
+            href="https://normandiewebschool.fr/">site de l'établissement
           </p>
           <p>
-            <a href="mon Linkedin"
-              >https://www.linkedin.com/in/hugo-fresi-ba4aba27b</a
-            >
-          </p>
-          <p><a href="mon GitHub">https://github.com/HugoFRESI/html</a></p>
+            <a 
+            href=">https://github.com/HugoFRESI/html">Mon GitHub</a>
+          <p>
+  
           <h2>Soft Skills</h2>
           <ul>
             <li>travailleur</li>
