--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
           <p>
             <a 
-            href=">https://github.com/HugoFRESI/html">Mon GitHub</a>
+            href="https://hugofresi.github.io/html/">Mon GitHub</a>
           <p>
   
           <h2>Soft Skills</h2>
